validate: 2026-01-30-jvm-tuning-strategies